Adjust the production.rb file to compile assests so heroku looks all pretty and stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,10 @@
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
         	<li>
-        		<%= link_to 'Link 1', '#' %>
+        		<%= link_to 'About', '#' %>
         	</li>
         	<li>
-        		<%= link_to 'Link 2', '#' %>
+        		<%= link_to 'How to use Arbiter', '#' %>
         	</li>
         </ul>	
       </div>
