--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Fauna+One);
 
 /*This site was hacked together by Marco with lots of hot tub power*/
+.navbar-inner{
+	font-family: "Fauna One";
+}
 
 .steamy-hottub {
 	box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
