adding css to data

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -38,3 +38,10 @@ body{
 	font-weight: 200;
 	font-size: 34px;
 }
+
+.steamy-hottub-data{
+	color:white;
+	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
+	font-weight: 200;
+	font-size: 34px;
+}
