--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -45,3 +45,10 @@ body{
 	font-weight: 200;
 	font-size: 34px;
 }
+
+h3 {
+	color:white;
+	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
+	font-weight: 200;
+	font-size: 15pt;
+}
