--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -46,9 +46,20 @@ body{
 	font-size: 34px;
 }
 
+.btn-warning{
+	font-family: Arial , Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
+}
+
 h3 {
 	color:white;
 	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
+	font-weight: 200;
+	font-size: 12pt;
+}
+
+label {
+	color:white;
+	font-family: "Fauna One", Helvetica Neue, Helvetica, san-serif;
 	font-weight: 200;
 	font-size: 15pt;
 }
