--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,6 +4,6 @@
 
 	<h2 class="custom-font-h2">Your personal decision-maker</h2>
 
-	<%= link_to 'Decide Now!', '#', :class => 'btn btn-warning btn-large' %>
+	<%= link_to 'Decide Now!', pics_path, :class => 'btn btn-warning btn-large' %>
 
 </div>
