hide name arbiter

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,9 @@
 <div class="span6 offset4 text-center steamy-hottub">
 
-	<h1 class="custom-font-h1">Arbiter</h1>
+	<h1 class="custom-font-h1">My app</h1>
 
 	<h2 class="custom-font-h2">Your personal decision-maker</h2>
 
-	<%= link_to 'Decide Now!', pics_path, :class => 'btn btn-warning btn-large' %>
+	<%= link_to 'My app!', pics_path, :class => 'btn btn-warning btn-large' %>
 
 </div>
