--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 
 	<h1 class="custom-font-h1">My app</h1>
 
-	<h2 class="custom-font-h2">Your personal decision-maker</h2>
+	<h2 class="custom-font-h2">My first web app</h2>
 
 	<%= link_to 'My app!', pics_path, :class => 'btn btn-warning btn-large' %>
 
