--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -4,6 +4,9 @@
 
 		<h1 class="custom-font-h1">
 			Hour: <%= pic.hour %> </h1>
+
+		<%= image_tag pic.image %>	
+			
 		<br />
 		<h2 class="custom-font-h2">Emotion: <%= pic.emotion %>
 		<br />
