--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -6,6 +6,11 @@
  	</br>
 		<%= simple_form_for @pic do |f| %>
 			<%= f.input :hour, label: 'Which hour was this?', placeholder: '1, 2, 3, etc.' %>
+
+			<%= f.input :image, label: 'Selfie' %>
+
+
+
 			<%= f.input :emotion, label: 'How did you feel?', placeholder: 'Stoked, Excited, Confused' %>
 			<%= f.input :learned, label: 'What did you learn?', placeholder: 'HTML, CSS3, Rails, Ruby, Github' %>
 
