adjust image stuff

--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -7,7 +7,7 @@
 		<%= simple_form_for @pic do |f| %>
 			<%= f.input :hour, label: 'Which hour was this?', placeholder: '1, 2, 3, etc.' %>
 
-			<%= f.input :image, label: 'Selfie' %>
+			<%= f.input :image, label: 'Selfie', :class => 'btn btn-warning btn-default' %>
 
 
 
